examples/test/testpolicy16004.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16004
  namespace: namespace330
spec:
  podSelector:
    matchLabels:
      key25: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value47
          key45: value21
          key34: value14
      podSelector:
        matchLabels:
          key13: value7
